2005-04-26  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/consumers/httpstreamer/http.py:
	* flumotion/component/consumers/httpstreamer/resources.py:
	  get the stats again, instead of using None.
	  DANGER WILL: if there are GIL problems, this is the first
	  thing to check !

2005-04-25  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/wizard/sidebar.py:
	  declare the classvars

2005-04-25  Andy Wingo  <wingo@pobox.com>

	* flumotion/wizard/steps.py: No more placeholders, no more
	Consumption2.

	* flumotion/wizard/step.py (WizardStep): s/step_name/name/. All
	accessors changed.

	* flumotion/wizard/sidebar.py (SidebarSection.__init__): Allow
	sidebar entries to have different titles than their names. Thus a
	Production button can have a Source title. Crack.
	(WizardSidebar.push, WizardSidebar.pop): Push and pop from the top
	of the stack, not the active section.

	* data/wizard/wizard_summary.glade: Fix visibility problem.

	* flumotion/wizard/sidebar.py (WizardSidebar.__init__): Fix size
	request. 
	(SidebarButton.__init__): Fix padding.

	* flumotion/wizard/wizard.py (Scenario.show_next): Fix variable
	ref.
	
	* flumotion/wizard/wizard.py (Scenario.show_next): 
	* flumotion/wizard/types.py (WalkableStack.push): Remove some
	prints.

	* flumotion/wizard/steps.py: Don't register the steps, that kruft
	is gone thankfully. Add pages for sections. Return None for
	get_next at the end of sections. Unfortunately have to change the
	name of the consumption page -- will be working on this.

	* flumotion/wizard/wizard.py (Scenario): Initial attempt at
	tearing the stack logic out of the wizard.
	(BasicScenario): Basic scenario with six sections and steps
	autoloaded from steps.py.
	(Wizard): Is a gladewindow now.

	* flumotion/wizard/sidebar.py: New file.
	(WizardSidebar): Widget for the sidebar. Has four operations:
	set_sections, show_step, push, and pop.
